--- a/.github/workflows/Developer_pull_Request.yml
+++ b/.github/workflows/Developer_pull_Request.yml
@@ -2,7 +2,7 @@ name: Developer_Pull_Request
 on:
   pull_request:
     branches:
-      - 'XPNS-*'
+      - 'main'
 jobs:
   check-bats-version:
     runs-on: self-hosted
