--- a/.github/workflows/Developer_pull_Request.yml
+++ b/.github/workflows/Developer_pull_Request.yml
@@ -7,6 +7,13 @@ jobs:
   check-bats-version:
     runs-on: self-hosted
     steps:
-      - run: env
-      
+      - name: checkout
+        uses: actions/checkout@v4
+      - run: ls -l
+      - run: tail index.js
+
+
+
+
+
 #
