--- a/.github/workflows/Developer_pull_Request.yml
+++ b/.github/workflows/Developer_pull_Request.yml
@@ -4,13 +4,25 @@ on:
     branches:
       - 'main'
 jobs:
-  check-bats-version:
+  CI_steps:
     runs-on: self-hosted
     steps:
       - name: checkout
         uses: actions/checkout@v4
-      - run: ls -l
-      - run: tail index.js
 
+      - name: Unit tests
+        run: echo Unit tests
+
+      - name: Integration tests
+        run: echo Integration tests
+
+      - name: SAST Scans
+        run: echo SAST Scans
+
+      - name: Detect Secrets in Source Code
+        run: echo Detect Secrets in Source Code
+
+      - name: Code Quality
+        run: echo Code Quality
 
 
