--- a/.github/workflows/Release_Tags.yml
+++ b/.github/workflows/Release_Tags.yml
@@ -4,13 +4,24 @@ on:
     tags:
       - "v*"
 jobs:
-  check-bats-version:
+  CI_steps:
     runs-on: self-hosted
     steps:
       - name: checkout
         uses: actions/checkout@v4
-      - run: ls -l
-      - run: tail index.js
+
+      - name: SAST Scans
+        run: echo SAST Scans
+
+      - name: SCA Scans
+        run: echo SCA Scans
+
+      - name: Detect Secrets in Source Code
+        run: echo Detect Secrets in Source Code
+
+      - name: Produce Artifact
+        run: echo Produce Artifact
+
 
 
 
