Testing github actions central jobs re-use,using a central file now

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -1,5 +1,5 @@
 name: caller workflow
-on: [push,pull-request]
+on: [push,pull_request]
 jobs:
   build:
     uses: NARENDRA-935/Github-actions/.github/workflows/sample.yml@main
