adding common github actions for branch pipeline

--- a/.github/workflows/Developer_Branch_CI.yml
+++ b/.github/workflows/Developer_Branch_CI.yml
@@ -5,19 +5,7 @@ on:
       - 'XPNS-*'
 jobs:
   CI_steps:
-    runs-on: self-hosted
-    steps:
-      - name: checkout
-        uses: actions/checkout@v4
-
-      - name: Unit tests
-        run: echo Unit tests
-
-      - name: Integration tests
-        run: echo Integration tests
-
-      - name: Code Quality
-        run: echo Code Quality
+    uses: NARENDRA-935/Github-actions/.github/workflows/sample.yml@main
 
 
       
