--- a/.github/workflows/Developer_Branch_CI.yml
+++ b/.github/workflows/Developer_Branch_CI.yml
@@ -5,7 +5,7 @@ on:
       - 'XPNS-*'
 jobs:
   CI_steps:
-    uses: NARENDRA-935/Github-actions/.github/workflows/sample.yml@main
+    uses: NARENDRA-935/Github-actions/.github/workflows/Developer_Branch_CI@main
 
 
       
