--- a/.github/workflows/Release_Tags.yml
+++ b/.github/workflows/Release_Tags.yml
@@ -5,7 +5,7 @@ on:
       - "v*"
 jobs:
   CI_steps:
-    #uses: NARENDRA-935/Github-actions/.github/workflows/sample.yml@main
+    uses: NARENDRA-935/Github-actions/.github/workflows/Release_Tags.yml@main
 
 
 
